[527469] Removes deprecated code in the query test framework and suites
Change-Id: I47378d42672f6239529f9a0fcded9e535f77e199
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>